Fix background color overlap

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 /* Header Styles */
 .header {
   width: 100%;
-  background-image: url("../Figures/header-bg.png");
+  background-color: transparent;
   background-size: contain;
   background-repeat: no-repeat;
   height: 100vh;
@@ -161,7 +161,7 @@ nav ul li:hover .submenu2 ul li {
 @media (max-width: 900px) {
   .header {
     width: 1300px;
-    background-image: url("../Figures/header-bg.png");
+    background-color: transparent;
     background-size: contain;
     background-repeat: no-repeat;
     height: 100vh;
